@@ -1,17 +1,27 @@
 package ÖvnUppg1_BasicStreams;
 
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.partitioningBy;
+import static java.util.stream.Collectors.*;
 
 public class ÖvnUppg1h_maps {
 
     public Map<Boolean, List<Book>> thisIsFact(List<Book> list){
         return list.stream().collect(partitioningBy(b -> b.isFact()));
     }
+
+    public Map<Boolean, List<String>> thisIsFact2(List<Book> list){
+        Map<Boolean, List<Book>> tempMap = list.stream().collect(partitioningBy(b -> b.isFact()));
+        Map<Boolean, List<String>> finalMap = new HashMap();
+
+        for (Map.Entry<Boolean, List<Book>> entry : tempMap.entrySet()) {
+            finalMap.put(entry.getKey(), entry.getValue().stream().map(Book::getTitle).toList());
+        }
+
+        return finalMap;
+    }
+
 
     public Map<String, List<Book>> authorMap(List<Book> list){
         return list.stream().collect(groupingBy(b -> b.getAuthor()));
@@ -28,17 +38,23 @@ public class ÖvnUppg1h_maps {
         List<Book> list = BookUtil.getBookList();
         thisIsFact(list).forEach(
                 (k,v )-> System.out.println(k+" "+v.stream()
-                                .map(Book::getTitle).collect(Collectors.toList())));
+                                .map(Book::getTitle).toList()));
+
+        System.out.println();
+        thisIsFact2(list).forEach(
+                (k,v )-> System.out.println(k+" "+v));
+
+
 
         System.out.println();
         authorMap(list).forEach(
                 (k,v )-> System.out.println(k+" "+v.stream()
-                        .map(Book::getTitle).collect(Collectors.toList())));
+                        .map(Book::getTitle).toList()));
 
         System.out.println();
         colorMap(list).forEach(
                 (k,v )-> System.out.println(k+" "+v.stream()
-                        .map(Book::getTitle).collect(Collectors.toList())));
+                        .map(Book::getTitle).toList()));
 
     }
 
